--- a/package.json
+++ b/package.json
@@ -12,18 +12,29 @@
   "license": "ISC",
   "dependencies": {
     "@types/react-dom": "^16.9.4",
-    "react-dom": "^16.12.0"
+    "@types/react-router-dom": "^5.1.3",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
     "@okatechnology/eslint-config": "0.0.7",
+    "@types/mini-css-extract-plugin": "^0.9.0",
     "@types/react": "^16.9.17",
     "@types/styled-components": "^4.4.2",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.41.2",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
+    "mini-css-extract-plugin": "^0.9.0",
     "react": "^16.12.0",
+    "style-loader": "^1.1.3",
     "styled-components": "^5.0.0",
     "terser-webpack-plugin": "^2.3.2",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
